--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>login</title>
 </head>
 
-<body>
+<body class="vsc-initialized">
     <div class="main-login">
         <div class="left-login">
             <h1>Faça login <br> E entre para o nosso time</h1>
